[package]
name = "egui_cosmic_text"
version = "0.2.0"
edition = "2021"
description = "Unofficial cosmic text widget and utilities for egui"
license = "MIT"
repository = "https://github.com/tamewild/egui_cosmic_text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.30.0", default-features = false }
cosmic-text = "0.12.1"
cosmic_undo_2 = { version = "0.2.0", optional = true, default-features = false }
etagere = "0.2.15"
imgref = "1.11.0"
lru = "0.13.0"

[dev-dependencies]
eframe = "0.30.0"
rustc-hash = "2.1.0"
arboard = "3.4.1"

[features]
default = ["widget"]
widget = ["cosmic_undo_2"]
shape-run-cache = ["cosmic-text/shape-run-cache"]

[workspace]
members = ["demo"]
resolver = "2"